# ymmsl-python

./: .coveragerc  .gitignore  .prospector.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  NOTICE  README.rst  pylintrc  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  ci_python3.5.1.yaml  ci_python3.5.yaml  ci_python3.6.1.yaml  ci_python3.6.yaml  ci_python3.7.yaml  ci_python3.8.yaml  ci_python_compatibility.yaml
docs/: Makefile  api.rst  basic_usage.rst  conf.py  creating_from_python.rst  data_model_overview.rst  describing_models.rst  describing_programs.rst  describing_runs.rst  describing_scenarios.rst  example.ymmsl  example_model.ymmsl  example_programs.ymmsl  example_run.ymmsl  example_settings.ymmsl  from_python.py  from_python.ymmsl  functionality.rst  index.rst  load_modify_save.py  macro_meso_micro.py  macro_meso_micro.ymmsl  make.bat  overview.rst  requirements.txt  upgrading_to_v0_2.rst  ymmsl_python.rst
tests/: conftest.py  test_checkpoint.py  test_component.py  test_compute_element.py  test_configuration.py  test_document.py  test_execution.py  test_experiment.py  test_identity.py  test_io.py  test_model.py  test_settings.py  test_simulation.py  test_ymmsl-python.py  test_ymmsl.py
ymmsl/: __init__.py  checkpoint.py  command_line.py  component.py  compute_element.py  configuration.py  document.py  execution.py  experiment.py  identity.py  io.py  model.py  settings.py  simulation.py  ymmsl.py
ymmsl-python/: __init__.py
ymmsl/conversion/: convert_v0_1_to_v0_2.py  converter.py
ymmsl/conversion/tests/: conftest.py  test_convert_v0_1_to_v0_2.py  test_converter.py
ymmsl/tests/: conftest.py  test_examples.py  test_io.py  test_io_v0_1.py  test_load_as.py
ymmsl/v0_1/: __init__.py  component.py  configuration.py  document.py  execution.py  identity.py  io.py  model.py  settings.py
ymmsl/v0_1/tests/: conftest.py  test_checkpoint.py  test_component.py  test_configuration.py  test_document.py  test_execution.py  test_identity.py  test_io.py  test_model.py  test_settings.py
ymmsl/v0_2/: __init__.py  checkpoint.py  component.py  configuration.py  document.py  execution.py  identity.py  implementation.py  imports.py  model.py  ports.py  program.py  resolver.py  resources.py  settings.py  supported_settings.py  timelines.py
ymmsl/v0_2/tests/: conftest.py  test_component.py  test_configuration.py  test_imports.py  test_model.py  test_ports.py  test_program.py  test_resolver.py  test_supported_settings.py  test_timelines.py
ymmsl/v0_2/tests/ymmsl1/: timelines.ymmsl
ymmsl/v0_2/tests/ymmsl1/a/: broken.ymmsl  d.ymmsl  e.ymmsl  f.ymmsl  g.ymmsl  h.ymmsl
ymmsl/v0_2/tests/ymmsl1/a/b/: c.ymmsl
