[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = ymmsl

[tool:pytest]
testpaths = tests ymmsl
addopts = --mypy --cov --cov-report xml --cov-report term-missing --cov-report html

[mypy]
disallow_incomplete_defs = True
disallow_untyped_defs = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
