[metadata]
description_file = README.md

[coverage:run]
branch = True
source = ymmsl

[tool:pytest]
testpaths = tests ymmsl
addopts = --cov --cov-report xml --cov-report term-missing --cov-report html -vv

[mypy]
files = ymmsl/**/*.py
# mypy_path = ymmsl
disallow_incomplete_defs = True
disallow_untyped_defs = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[pydocstyle]
convention = google
ignore = D407
